--- a/web/package.json
+++ b/web/package.json
@@ -15,8 +15,11 @@
     "@monaco-editor/react": "^4.7.0",
     "antd": "^5.27.6",
     "axios": "^1.12.2",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.4",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0"
   },
