--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "monaco-editor": "^0.55.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.2.4",
